//
// Created by eduard on 28.03.2025.
//

#ifndef FUNDS_H
#define FUNDS_H

class Funds {
    long long amount;
};

#endif //FUNDS_H
