//
// Created by eduard on 28.03.2025.
//

#ifndef PRICE_H
#define PRICE_H

class Price {
    long long price;
};

#endif //PRICE_H
