//
// Created by eduard on 28.03.2025.
//

#ifndef QUANTITY_H
#define QUANTITY_H

class Quantity {
    const int quantity;
};

#endif //QUANTITY_H
