//
// Created by eduard on 28.03.2025.
//

#ifndef SYMBOL_H
#define SYMBOL_H
#include <string>

class Symbol {
    const std::string symbol;
};

#endif //SYMBOL_H
